--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,17 @@
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
 
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3   # <-- check latest on fabricmc.net/develop
+loader_version=0.16.7          # <-- check latest
+
+#Fabric api
+fabric_version=0.106.1+1.21.1  # <-- check latest on fabricmc.net/develop
+
+# Mod Properties
+mod_version=1.0.0
+maven_group=com.grok.apexclient
+archives_base_name=apexclient
